# theEagle

./: .gitignore  BoxPlot-HRbyPower.py  CONTRIBUTING.md  HR_TRACKING_GUIDE.md  HRbyPower.py  HRoverTime.py  Hydration Gear.md  Polarized-training-Model.ipynb  QUICK_START_HR_TRACKER.md  README.md  ScatterPlotMatrix.py  analyse-base-run.py  analyse-sprint-interval.py  analyze_fit.py  check_data_validity.py  check_json_fields.py  check_python_base.py  correlation-analysis.py  debug_json.py  decay-delay-intensity-workout.py  decay-delay-low-aerobic.py  decay-rate-all-intensity.py  easy_runs_data.csv  efficient_run_records.csv  en_spd.csv  ftp-test.py  hr_improvement_tracker.py  identify_bad_data.py  interval_high_intensity_analysis.py  interval_visualization.py  main.py  output.txt  parser.py  plan.txt  power-bins.py  predict-efficiency.py  pyproject.toml  requirements.txt  running-analysis.py  scan_fit.py  (+10 more)
configs/: README.md
docs/: Efficiency-Factor.md  FTP-Test.md  HEART_RATE_RECOVERY.md  HIIT to Improve VO2 Max.md  HRDI-Analysis.md  Health.md  Hydration Gear.md  Improve-Aerobic-Base.md  Mitochondria.md  NutritionandHydration.md  README.md  acute-load-and-chronic-load.md  calculate-vo2max.md  daily-metric-to-focus.md  decay-delay-calculation.md  decay-delay-low-aerobic.md  efficient-run-metrics.md  how-to-run.md  load-focus-ranges-vo2max.md  load-focus-regression.md  power-building-excercise-from-home.md  power_to_weight_ratio.md  running-dynamics.md  running-types-and-metrics.md  running_analysis.md  test.md  track-hrv.md
easy_runs/: notes.md
logo/: readme.md
(+106 files in other folders)
