[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "theeagle"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fitparse==1.2.0",
    "matplotlib==3.10.0",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "pytz==2024.1",
    "scikit-learn==1.5.2",
    "seaborn==0.13.2",
]

[project.scripts]
easy-run-hr-report = "src.hr_improvement_tracker:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
